--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
     <button onclick="switchLang('fr')"><strong>Français</strong></button>
   </nav>
 
-  <section id="lang-en" class="active" lang="en">$1</section>
+  <section id="lang-en" class="active" lang="en">
+    <p>Welcome to the official metadata mirror of the journal <em>Formazione & Insegnamento</em>. This site provides structured access to article-level metadata and redirects to the publisher's canonical platform.</p>
+    <p><a href="https://ojs.pensamultimedia.it/index.php/siref">Access the journal</a></p>
+  </section>
 
-  <section id="lang-$1" lang="$2" style="display:none">$3</section>
+  <section id="lang-it" lang="it" style="display:none">
+    <p>Benvenuti nel mirror ufficiale dei metadati della rivista <em>Formazione & Insegnamento</em>. Questo sito fornisce accesso strutturato ai metadati degli articoli e rimanda alla piattaforma editoriale ufficiale.</p>
+    <p><a href="https://ojs.pensamultimedia.it/index.php/siref">Accedi alla rivista</a></p>
+  </section>
 
   <section id="lang-es" lang="es">
     <p>Bienvenidos al portal oficial de metadatos de la revista <em>Formazione & Insegnamento</em>. Este sitio ofrece acceso estructurado a los metadatos de los artículos y redirige a la plataforma editorial original.</p>
