--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <p><a href="https://ojs.pensamultimedia.it/index.php/siref">Access the journal</a></p>
   </section>
 
-  <section id="lang-it" lang="it" style="display:none">
+  <section id="lang-" lang="">
     <p>Benvenuti nel mirror ufficiale dei metadati della rivista <em>Formazione & Insegnamento</em>. Questo sito fornisce accesso strutturato ai metadati degli articoli e rimanda alla piattaforma editoriale ufficiale.</p>
     <p><a href="https://ojs.pensamultimedia.it/index.php/siref">Accedi alla rivista</a></p>
   </section>
